[gd_scene load_steps=6 format=3 uid="uid://cnu8vchcstyrd"]

[ext_resource type="LabelSettings" uid="uid://bjn1ev2his67x" path="res://assets/lg_48_wh.tres" id="1_0cn8u"]
[ext_resource type="LabelSettings" uid="uid://jvf4b2c7b1uy" path="res://assets/lg_32_wh.tres" id="1_mfecf"]
[ext_resource type="Script" path="res://scenes/game_ui/game_ui.gd" id="1_wdnm6"]

[sub_resource type="Animation" id="Animation_5bbp7"]
resource_name = "flash_level_complete"
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("LevelCompleteContainer/LevelCompleteLabel:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_55p1t"]
_data = {
"flash_level_complete": SubResource("Animation_5bbp7")
}

[node name="MarginContainer" type="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/margin_left = 24
theme_override_constants/margin_top = 24
theme_override_constants/margin_right = 24
theme_override_constants/margin_bottom = 24
script = ExtResource("1_wdnm6")

[node name="ScoreContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="Level" type="HBoxContainer" parent="ScoreContainer"]
layout_mode = 2

[node name="LevelLabel" type="Label" parent="ScoreContainer/Level"]
custom_minimum_size = Vector2(109, 0)
layout_mode = 2
text = "Level"
label_settings = ExtResource("1_mfecf")
horizontal_alignment = 2

[node name="LevelValue" type="Label" parent="ScoreContainer/Level"]
layout_mode = 2
text = "000"
label_settings = ExtResource("1_mfecf")

[node name="Shots" type="HBoxContainer" parent="ScoreContainer"]
layout_mode = 2

[node name="AttemptsLabel" type="Label" parent="ScoreContainer/Shots"]
custom_minimum_size = Vector2(109, 0)
layout_mode = 2
text = "Shots"
label_settings = ExtResource("1_mfecf")
horizontal_alignment = 2

[node name="AttemptsValue" type="Label" parent="ScoreContainer/Shots"]
layout_mode = 2
text = "000"
label_settings = ExtResource("1_mfecf")

[node name="LevelCompleteContainer" type="VBoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="LevelCompleteLabel" type="Label" parent="LevelCompleteContainer"]
layout_mode = 2
text = "Level Complete"
label_settings = ExtResource("1_0cn8u")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_55p1t")
}
